firewall/iptables.conf
# Generated by iptables-save v1.8.4 on Tue Feb 16 15:14:20 2021
*mangle
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
COMMIT
# Completed on Tue Feb 16 15:14:20 2021
# Generated by iptables-save v1.8.4 on Tue Feb 16 15:14:20 2021
*security
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
COMMIT
# Completed on Tue Feb 16 15:14:20 2021
# Generated by iptables-save v1.8.4 on Tue Feb 16 15:14:20 2021
*raw
:PREROUTING ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
COMMIT
# Completed on Tue Feb 16 15:14:20 2021
# Generated by iptables-save v1.8.4 on Tue Feb 16 15:14:20 2021
*filter
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [0:0]
:MINAT-USER - [0:0]
:loopback - [0:0]
:loopbacko - [0:0]
:negra - [0:0]
:negrao - [0:0]
:netbackup - [0:0]
:netbackupo - [0:0]
:netbots - [0:0]
:netbotso - [0:0]
:netdrop - [0:0]
:netdropo - [0:0]
:inetforward - [0:0]
:coyl-after-forward - [0:0]
:coyl-after-input - [0:0]
:coyl-after-logging-forward - [0:0]
:coyl-after-logging-input - [0:0]
:coyl-after-logging-output - [0:0]
:coyl-after-output - [0:0]
:coyl-before-forward - [0:0]
:coyl-before-input - [0:0]
:coyl-before-logging-forward - [0:0]
:coyl-before-logging-input - [0:0]
:coyl-before-logging-output - [0:0]
:coyl-before-output - [0:0]
:coyl-logging-allow - [0:0]
:coyl-logging-deny - [0:0]
:coyl-not-local - [0:0]
:coyl-reject-forward - [0:0]
:coyl-reject-input - [0:0]
:coyl-reject-output - [0:0]
:coyl-skip-to-policy-forward - [0:0]
:coyl-skip-to-policy-input - [0:0]
:coyl-skip-to-policy-output - [0:0]
:coyl-track-forward - [0:0]
:coyl-track-input - [0:0]
:coyl-track-output - [0:0]
:coyl-user-forward - [0:0]
:coyl-user-input - [0:0]
:coyl-user-limit - [0:0]
:coyl-user-limit-accept - [0:0]
:coyl-user-logging-forward - [0:0]
:coyl-user-output - [0:0]
-A INPUT -j loopback
-A INPUT -j negra
-A INPUT -j netdrop
-A INPUT -j netbots
-A INPUT -j netbackup
-A INPUT -j coyl-before-logging-input
-A INPUT -j coyl-before-input
-A INPUT -j coyl-after-input
-A INPUT -j coyl-after-logging-input
-A INPUT -j coyl-reject-input
-A INPUT -j coyl-track-input
-A FORWARD -j inetforward
-A FORWARD -j coyl-before-forward
-A FORWARD -j MINAT-USER
-A inetforward -j loopback
-A inetforward -j negra
-A inetforward -j netdrop
-A inetforward -j netbots
-A inetforward -j netbackup
-A inetforward -j loopbacko
-A inetforward -j negrao
-A inetforward -j netdropo
-A inetforward -j netbotso
-A inetforward -j netbackupo
-A OUTPUT -j loopbacko
-A OUTPUT -j negrao
-A OUTPUT -j netdropo
-A OUTPUT -j netbotso
-A OUTPUT -j netbackupo
-A OUTPUT -j coyl-before-logging-output
-A OUTPUT -j coyl-before-output
-A OUTPUT -j coyl-after-output
-A OUTPUT -j coyl-after-logging-output
-A OUTPUT -j coyl-reject-output
-A OUTPUT -j coyl-track-output
-A loopback -i lo -j ACCEPT
-A loopbacko -o lo -j ACCEPT
-A coyl-after-input -p udp -m udp --dport 137 -j coyl-skip-to-policy-input
-A coyl-after-input -p udp -m udp --dport 138 -j coyl-skip-to-policy-input
-A coyl-after-input -p tcp -m tcp --dport 139 -j coyl-skip-to-policy-input
-A coyl-after-input -p tcp -m tcp --dport 445 -j coyl-skip-to-policy-input
-A coyl-after-input -p udp -m udp --dport 67 -j coyl-skip-to-policy-input
-A coyl-after-input -p udp -m udp --dport 68 -j coyl-skip-to-policy-input
-A coyl-after-input -m addrtype --dst-type BROADCAST -j coyl-skip-to-policy-input
-A coyl-after-logging-forward -m limit --limit 3/min --limit-burst 10 -j LOG --log-prefix "[UFW BLOCK] "
-A coyl-after-logging-input -m limit --limit 3/min --limit-burst 10 -j LOG --log-prefix "[UFW BLOCK] "
-A coyl-before-forward -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A coyl-before-forward -p icmp -m icmp --icmp-type 3 -j ACCEPT
-A coyl-before-forward -m conntrack --ctstate INVALID -j DROP
-A coyl-before-forward -p icmp -m icmp --icmp-type 11 -j ACCEPT
-A coyl-before-forward -p icmp -m icmp --icmp-type 12 -j ACCEPT
-A coyl-before-forward -p icmp -m icmp --icmp-type 8 -j ACCEPT
-A coyl-before-forward -j coyl-user-input
-A coyl-before-input -i lo -j ACCEPT
-A coyl-before-input -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A coyl-before-input -m conntrack --ctstate INVALID -j coyl-logging-deny
-A coyl-before-input -m conntrack --ctstate INVALID -j DROP
-A coyl-before-input -p icmp -m icmp --icmp-type 3 -j ACCEPT
-A coyl-before-input -p icmp -m icmp --icmp-type 11 -j ACCEPT
-A coyl-before-input -p icmp -m icmp --icmp-type 12 -j ACCEPT
-A coyl-before-input -p icmp -m icmp --icmp-type 8 -j ACCEPT
-A coyl-before-input -p udp -m udp --sport 67 --dport 68 -j ACCEPT
-A coyl-before-input -j coyl-not-local
-A coyl-before-input -j coyl-user-input
-A coyl-before-output -o lo -j ACCEPT
-A coyl-before-output -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A coyl-before-output -j coyl-user-output
-A coyl-logging-allow -m limit --limit 3/min --limit-burst 10 -j LOG --log-prefix "[UFW ALLOW] "
-A coyl-logging-deny -m conntrack --ctstate INVALID -m limit --limit 3/min --limit-burst 10 -j RETURN
-A coyl-logging-deny -m limit --limit 3/min --limit-burst 10 -j LOG --log-prefix "[UFW BLOCK] "
-A coyl-not-local -m addrtype --dst-type LOCAL -j RETURN
-A coyl-not-local -m addrtype --dst-type MULTICAST -j RETURN
-A coyl-not-local -m addrtype --dst-type BROADCAST -j RETURN
-A coyl-not-local -m limit --limit 3/min --limit-burst 10 -j coyl-logging-deny
-A coyl-not-local -j DROP
-A coyl-skip-to-policy-forward -j DROP
-A coyl-skip-to-policy-input -j DROP
-A coyl-skip-to-policy-output -j ACCEPT
-A coyl-track-input -j DROP
-A coyl-track-output -p tcp -m conntrack --ctstate NEW -j ACCEPT
-A coyl-track-output -p udp -m conntrack --ctstate NEW -j ACCEPT
-A coyl-user-limit -m limit --limit 3/min -j LOG --log-prefix "[UFW LIMIT BLOCK]"
-A coyl-user-limit -j REJECT --reject-with icmp-port-unreachable
-A coyl-user-limit-accept -j ACCEPT
COMMIT
# Completed on Tue Feb 16 15:14:20 2021
# Generated by iptables-save v1.8.4 on Tue Feb 16 15:14:20 2021
*nat
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
:MINAT-POST - [0:0]
:MINAT-PRE - [0:0]
:NOT-NAT - [0:0]
:COYLET-PRE - [0:0]
-A PREROUTING -j COYLET-PRE
-A POSTROUTING -j MINAT-POST
-A COYLET-PRE -j NOT-NAT
COMMIT
# Completed on Tue Feb 16 15:14:20 2021
